# rust_todo

./: Cargo.toml  README.md  Settings.toml  elenco.json  tareas.bincode  tareas.json
src/: data.rs  functions.rs  json.rs  lib.rs  main.rs  settings.rs
src/app/: commands.rs  mod.rs  task.rs  ui.rs
src/app/commands/: agregar.rs  cargar.rs  completar.rs  desetiquetar.rs  desmarcar.rs  eliminar.rs  eliminar_todas.rs  etiquetar.rs  explicar.rs  importar.rs  listar.rs  mod.rs
src/storage/: bincode.rs  csv.rs  json.rs  mod.rs  txt.rs
tests/: cli.rs
tests/cli/: comandos_basicos.rs  etiquetado.rs  flujo_feliz.rs  manejo_de_archivos.rs  mod.rs
