[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
config = { version = "0.15.12", features = ["toml"] }
dialoguer = "0.11"
console = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
toml = "0.9.4"       
serde = "1.0"      

[lib]
path = "src/lib.rs"

[[bin]]
name = "todo"
path = "src/main.rs"

